# Orbiton

./: .gitignore  HANDOVER.md  ML_IMPLEMENTATION_PLAN.md  PLAN1.md  PLAN2.md  README.md  artifacts_schema_view.html  package-lock.json  package.json  swagger.yaml
apps/intelligence/: Dockerfile.base  README.md  pyproject.toml
apps/intelligence/matching_service/: Dockerfile  __init__.py  main.py
apps/intelligence/matching_service/api/: routes.py
apps/intelligence/matching_service/pipeline/: boolean_filter.py  embedder.py  explainer.py  scorer.py
apps/intelligence/matching_service/tests/: test_scorer.py
apps/intelligence/prediction_service/: Dockerfile  __init__.py  main.py
apps/intelligence/prediction_service/api/: routes.py
apps/intelligence/prediction_service/models/: .gitkeep
apps/intelligence/prediction_service/pipeline/: features.py  infer.py  train.py
apps/intelligence/prediction_service/tests/: test_features.py
apps/intelligence/resume_service/: Dockerfile  __init__.py  main.py
apps/intelligence/resume_service/api/: routes.py
apps/intelligence/resume_service/pipeline/: extract.py  ner.py  normalize.py  storage.py  webhook.py
apps/intelligence/resume_service/tests/: test_normalize.py
apps/intelligence/resume_service/workers/: celery_app.py  tasks.py
apps/intelligence/shared/: __init__.py  config.py
apps/intelligence/shared/db/: __init__.py  postgres.py
apps/intelligence/shared/http/: __init__.py  webhook.py
apps/intelligence/shared/observability/: logging.py
apps/intelligence/shared/schemas/: __init__.py  json_resume.py  match.py  (+1 more)
(+282 files in other folders)
